--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /Proyecto 1/nbproject/private/
 /Proyecto 1/build/
 /LFP PRACTICA/nbproject/private/
+/Proyecto2/nbproject/private/
+/Proyecto2/build/
